--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,4 +1,3 @@
-@import "./vendor/normalize";
-@import "./base/variables";
-@import "./base/mixins";
-@import "./base/globals";
+@import "~normalize.css/normalize.css";
+@import "./base/all";
+@import "./analyzer/main";
