--- a/src/stylesheets/analyzer/controller.scss
+++ b/src/stylesheets/analyzer/controller.scss
@@ -2,6 +2,17 @@
   width: 450px;
 }
 
+.filter-direction-container {
+  margin-bottom: 15px;
+}
+
+.controller-title {
+  overflow-x: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 350px;
+}
+
 .below-input {
   margin-right: 15px;
 }
@@ -36,7 +47,7 @@
 }
 
 .arrows {
-  background-color: darken($component-bg, 9%);
+  background-color: $pop-gray;
   height: 100%;
   width: 25%;
 
@@ -52,17 +63,11 @@
 }
 
 .arrow-up {
-	border-left: 12.5px solid transparent;
-	border-right: 12.5px solid transparent;
-	border-bottom: 25px solid white;
-  height: 0;
-  width: 0;
+  margin-top: 5px;
+  @include triangle('up', 12.5px, white);
 }
 
 .arrow-down {
-	border-left: 12.5px solid transparent;
-	border-right: 12.5px solid transparent;
-	border-top: 25px solid white;
-  height: 0;
-  width: 0;
+  margin-bottom: 5px;
+	@include triangle('down', 12.5px, white);
 }
