--- a/src/stylesheets/base/_globals.scss
+++ b/src/stylesheets/base/_globals.scss
@@ -33,6 +33,11 @@ header {
   padding: 12.5px 0;
 }
 
+table {
+  border-collapse: collapse;
+  text-align: left;
+}
+
 .container {
   width: 960px;
   margin: 0 auto;
