--- a/src/stylesheets/base/_mixins.scss
+++ b/src/stylesheets/base/_mixins.scss
@@ -4,3 +4,18 @@
   justify-content: $justify-content;
   align-items: $align-items;
 }
+
+@mixin triangle($direction, $size, $color) {
+	width: 0;
+	height: 0;
+
+	@if $direction == 'up' {
+		border-right: $size solid transparent;
+		border-bottom: $size * 1.732 solid $color;
+		border-left: $size solid transparent;
+	} @else if $direction == 'down' {
+		border-top: $size * 1.732 solid $color;
+		border-right: $size solid transparent;
+		border-left: $size solid transparent;
+	}
+}
