--- a/src/stylesheets/base/_variables.scss
+++ b/src/stylesheets/base/_variables.scss
@@ -1,4 +1,8 @@
 //Colors
 $component-bg: #F2F2F2;
+$pop-gray: darken($component-bg, 9%);
+$action-box-border: darken($component-bg, 36%);
 $uie-red: #951A1D;
 $active-bg: #148BF4;
+$action-open: #8DDEAC;
+$action-click: #1E743F;
