Fake backend, createStore, folders reducer and actions

--- a/src/stylesheets/analyzer/folders.scss
+++ b/src/stylesheets/analyzer/folders.scss
@@ -17,9 +17,9 @@
   padding-left: 15px;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
 
-  &.active {
-    background-color: $active-bg;
-    color: white;
-  }
+.folder--active {
+  background-color: $active-bg;
+  color: white;
 }
