--- a/src/stylesheets/analyzer/emails.scss
+++ b/src/stylesheets/analyzer/emails.scss
@@ -25,7 +25,6 @@
 }
 
 .action-box {
-  background-color: white;
   border: 1px solid $action-box-border;
   height: 41px;
   width: 26px;
@@ -45,6 +44,10 @@
 
 .action-box--unsub {
   background-color: $uie-red;
+}
+
+.action-box--none {
+  background-color: white;
 }
 
 .email-address {
