--- a/src/stylesheets/analyzer/emails.scss
+++ b/src/stylesheets/analyzer/emails.scss
@@ -50,11 +50,9 @@
   background-color: white;
 }
 
-.email-address {
+.email-address-col {
   background-color: white;
-  padding-left: 15px;
-  text-align: left;
-  width: 300px;
+  padding-left: 7px;
 }
 
 .campaign-id-vertical {
