--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,3 +1,4 @@
 @import "~normalize.css/normalize.css";
+@import "~fixed-data-table-2/dist/fixed-data-table.css";
 @import "./base/main";
 @import "./analyzer/main";
