Refactored store, functions to transform data

--- a/src/stylesheets/analyzer/emails.scss
+++ b/src/stylesheets/analyzer/emails.scss
@@ -86,7 +86,9 @@
 
 .email-address-cell {
   background-color: white;
+  height: 50px;
   padding-left: 15px;
+  width: 300px;
 }
 
 .campaigns-cell {
